# plan-nn

./: .gitignore  README.md  \  pyproject.toml  trained_ode_func.pth
data/: positions.npy  velocities.npy
src/: .nn-ode.py.swp  .simulate.py.swp  .train-ode.py.swp  nn-ode.py  nn_ode.py  simulate.py  specs.py  train-ode.py  train_ode.py
